# twstock-predictor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  start_dev.bat  start_server.bat  test_out.txt  test_output.txt  test_run.txt  test_stdout.txt
.claude/: settings.json
.claude/skills/: agent-system.md  data-fallback.md  factor-scoring.md  ml-pipeline.md  risk-management.md  testing-patterns.md
.streamlit/: config.toml
api/: deps.py  main.py
api/routers/: agent.py  alerts.py  market.py  pipeline.py  prediction.py  sentiment.py  stocks.py  system.py  technical.py
api/schemas/: agent.py  pipeline.py  prediction.py  stock.py
app/: main.py
app/components/: charts.py  (+3 more)
data/: risk_state.json
docs/: 20-factor-analysis.md  AI 量化交易架構報告書.md  architecture-optimization-v5.md  architecture.md  dev-environment-setup.md  factor-audit-2026-03-07.md  ideal-architecture.md  台股投資因子與ML應用研究.md  股票系統設計與台股實戰評估.md  還沒做的功能.md
models/: 2330_xgb.json  2330_xgb.meta.json
openclaw/: config.yaml
scripts/: ab_backtest.py  fetch_history.py  fetch_sector_data.py  init_db.py  live_score_check.py  setup_windows.ps1  test_retrain_2317.py  test_sector_training.py  train_models.py
tests/: conftest.py  test_backtest.py  test_chronos_model.py  test_ensemble.py  test_factor_scoring.py  test_features.py  test_labels.py  test_ml_pipeline_fixes.py  test_orchestrator.py  test_risk_manager.py  test_sentiment.py  test_stock_analysis_service.py  test_stock_fetcher.py  test_technical.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+92 files in other folders)
