[project]
name = "twstock-predictor"
version = "3.0.0"
description = "台股 AI 量化分析系統 — 20 因子評分 + HMM 體制偵測 + ML 集成 + LLM 敘事 + 風控"
requires-python = ">=3.12"
dependencies = [
    # Data
    "FinMind>=1.6",
    "twstock>=1.3",
    "yfinance>=0.2",
    "requests>=2.31",

    # Analysis
    "pandas>=2.2",
    "numpy>=1.26",
    "ta",  # version constrained by FinMind (>=0.5.25,<0.6)

    # ML Core
    "torch>=2.2",
    "xgboost>=2.0",
    "scikit-learn>=1.4",

    # ML Advanced (Tier 2)
    "pytorch-forecasting>=1.0",
    "lightning>=2.2",
    "hmmlearn>=0.3",         # HMM 市場狀態偵測

    # Database
    "sqlalchemy>=2.0",

    # Web / API
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",

    # Utils
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
analysis = [
    "shap>=0.45",            # SHAP 特徵重要性
]
notify = [
    "line-notify>=0.1",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
